# littlebear

./: .gitignore  CMakeLists.txt  README.md  animation.cpp  compiler.sh  main.cpp  player.cpp
headers/: animation.h  level.h  menus.h  platform.h  player.h
src/: animation.cpp  main.cpp  menus.cpp  player.cpp
